[metadata]
name = fluent_compiler
version = 0.3
description = Blazing fast implementation of Fluent localization language.
long_description = file: README.rst
long_description_content_type = text/x-rst
author = Luke Plant
author_email = L.Plant.98@cantab.net
license = APL 2
url = https://github.com/django-ftl/fluent-compiler
keywords =
    fluent
    localization
    l10n
    compiler
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[options]
packages = find:
package_dir = =src
install_requires =
    fluent.syntax>=0.14
    attrs>=19.3.0
    babel>=2.8.0
    pytz

[options.packages.find]
where = src

[flake8]
exclude = .tox,build,.eggs
ignore = D100,D101,W504,W503
max-line-length = 120
