[metadata]
name = fluent_compiler
version = attr: fluent_compiler.__version__
description = Blazing fast implementation of Fluent localization language.
long_description = file: README.rst
long_description_content_type = text/x-rst
author = Luke Plant
author_email = L.Plant.98@cantab.net
license = APL 2
url = https://github.com/django-ftl/fluent-compiler
keywords =
    fluent
    localization
    l10n
    compiler
    projectfluent
    ftl
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    Topic :: Software Development :: Compilers
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Software Development :: Localization
project_urls =
    Homepage = https://github.com/django-ftl/fluent-compiler
    Documentation = https://fluent-compiler.readthedocs.io/en/latest/
    Repository = https://github.com/django-ftl/fluent-compiler
    Changelog = https://fluent-compiler.readthedocs.io/en/latest/history.html
    Tracker = https://github.com/django-ftl/fluent-compiler/issues

[options]
packages = find:
package_dir = =src
install_requires =
    fluent.syntax>=0.14
    attrs>=19.3.0
    babel>=2.8.0
    pytz

[options.packages.find]
where = src

[flake8]
exclude = .tox,build,.eggs
ignore = D100,D101,W504,W503
max-line-length = 120
